단순 변환 동작 Mapper로 관리하도록 변경(행정구역 조회, 상세주소 조회, 날씨 조회 기능)